# Machine-Learning-Project-Template

./: .env  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  MLProject  Makefile  README.md  docker-compose.yml  packages.txt  pyproject.toml  recipe.yaml  requirements_jupyter.txt  setup.cfg
notebooks/: README.md  gensim_Doc2Vec.ipynb  gensim_FastText.ipynb  gensim_Word2Vec.ipynb  scikit-bow.ipynb  scikit-tfidf.ipynb
profiles/: local.yaml
scripts/: README.md  train.py
scripts/adapters/: mlflow.py  pandas.py
scripts/core/: config.py  domain.py  training.py
scripts/models/: README.md  model_abstraction.py
scripts/models/training_models/: lightgbm.py  scikit_model.py
scripts/models/word_embeddings/: gensim.py  scikit_embedding.py
scripts/ports/: load_data_gateway.py  model_versioning_gateway.py  training_model.py  word_embedding_gateway.py
scripts/tests/: README.md
scripts/tests/helpers/: check_Doc2Vec_lgb.py  check_FastText_lgb.py  check_Word2Vec_lgb.py  check_bow_dtc.py  check_bow_etc.py  check_bow_lgb.py  check_tfidf_dtc.py
scripts/tests/integration/adapters/: test_mlflow.py  test_pandas.py
scripts/tests/unit/adapters/: test_pandas.py
scripts/tests/unit/models/: test_gensim.py  test_model_abstraction.py
steps/: custom_metrics.py  ingest.py  split.py  train.py  transform.py
